atom.css
h1 {
	font-family: arial black;
	margin: auto;
	font-size: 800%;
	font-weight: 800;
	z-index: -1;
	color: #393f51;
}

h2 {
	font-family: arial black;
	position: absolute;
	font-size: 70px;
	color: red;
}

#center_text {
	text-align: center;
	position: absolute;
    top: 0; right: 0; bottom: 0; left: 0;
 
}

span {
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}

.atom {
	border-radius: 50%;
	position: absolute;
}

.core {
	width: 15px;
	height: 15px;
	background-color: red;
}

.electron {
	width: 4px;
	height: 4px;
	background-color: black;
}

.core1 {
	width: 18px;
	height: 18px;
	background-color: #ff7a2d;
}

